<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_chats">

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.friendchat.ui.profile.ProfileFragment"
        android:label="@string/your_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_chats"
        android:name="com.example.friendchat.ui.chats.ChatsFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_chats" />

    <fragment
        android:id="@+id/nav_info"
        android:name="com.example.friendchat.ui.info.InfoFragment"
        android:label="@string/info"
        tools:layout="@layout/fragment_info" />
</navigation>