<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/mar_15">

        <ImageButton
            android:id="@+id/profile_image"
            android:layout_width="@dimen/wid_250"
            android:layout_height="@dimen/wid_250"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            android:background="@drawable/ic_purple_person"
            android:contentDescription="@string/your_profile" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="@dimen/mar_15"
            android:layout_marginTop="@dimen/mar_15">

            <TextView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/your_name"
                android:textColor="@color/purple_500"
                android:textAlignment="center"/>

            <EditText
                android:id="@+id/profile_name"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:text="@string/friend"
                android:inputType="text"
                android:textAlignment="textStart"
                android:textColor="@color/teal_700"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="@dimen/mar_15"
            android:layout_marginTop="@dimen/mar_15">

            <TextView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/your_phone"
                android:textAlignment="center"
                android:textColor="@color/purple_500"/>

            <EditText
                android:id="@+id/profile_phone"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:text="@string/ex_number"
                android:inputType="phone"
                android:textAlignment="textStart"
                android:textColor="@color/teal_700"/>

        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/save_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="40dp"
        app:srcCompat="@drawable/ic_save"
        android:contentDescription="@string/save_changes" />

</FrameLayout>