<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:orientation="horizontal"
    android:layout_marginTop="10dp"
    android:layout_marginHorizontal="@dimen/mar_15"
    android:background="@color/purple_contact">

    <ImageButton
        android:id="@+id/friend_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:background="@drawable/ic_image_friend"
        android:contentDescription="@string/friend_image" />

    <TextView
        android:id="@+id/friend_name"
        android:layout_width="150dp"
        android:layout_height="match_parent"
        android:textAlignment="textStart"
        android:padding="5dp"
        android:text="@string/friend"
        android:textSize="@dimen/text_20"
        android:textStyle="bold"
        android:textColor="@color/teal_700"/>

    <TextView
        android:id="@+id/friend_phone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:autoLink="phone"
        android:padding="5dp"
        android:text="@string/ex_number"
        android:textSize="15sp"
        android:textAlignment="center"
        android:textColor="@color/teal_700"/>

</LinearLayout>