<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/mar_15">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/mar_15">

        <LinearLayout
            android:layout_width="@dimen/wid_250"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/night_mode"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/purple_200"/>

            <TextView
                android:id="@+id/settings_night"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/off"/>

        </LinearLayout>

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/mar_15"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/mar_15">

        <LinearLayout
            android:layout_width="@dimen/wid_250"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/in_app_browser"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/purple_200"/>

            <TextView
                android:id="@+id/settings_links"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/open_links"/>

        </LinearLayout>

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/mar_15"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/mar_15">

        <TextView
            android:layout_width="@dimen/wid_250"
            android:layout_height="wrap_content"
            android:text="@string/save_to_gallery"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@color/purple_200"/>

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/mar_15"/>

    </LinearLayout>

</LinearLayout>