<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/mar_15">

        <ImageButton
            android:id="@+id/new_contact_image"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            android:background="@drawable/ic_image_friend"
            android:contentDescription="@string/friend" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="@dimen/mar_15"
            android:layout_marginTop="@dimen/mar_15">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/ic_person" />

            <EditText
                android:id="@+id/new_contact_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/name"
                android:textAlignment="center"
                android:layout_marginHorizontal="@dimen/mar_15"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="@dimen/mar_15"
            android:layout_marginTop="@dimen/mar_15">

            <ImageView
                android:layout_width="50sp"
                android:layout_height="50sp"
                android:background="@drawable/ic__phone" />

            <EditText
                android:id="@+id/new_contact_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/ex_number"
                android:inputType="phone"
                android:textAlignment="center"
                android:layout_marginHorizontal="@dimen/mar_15" />

        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/save_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="40dp"
        app:srcCompat="@drawable/ic_save"
        android:contentDescription="@string/add_new" />

</FrameLayout>